added a files folder holding my b1 project and modified index.html url to blog

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a href="#work">Work</a>
             </li>
             <li class="col-sm-3">
-              <a href="http://kevinmartinez.github.io/blog/">Blog</a>
+              <a href="http://kevinmartinez.github.io/blog">Blog</a>
             </li>
             <li class="col-sm-3">
               <a href="#contact">Contact</a>
