changed links in nav, fixed typos in presentation and added a new quote

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kevin Bootstrap 3 Nanodegree</title>
+    <title>Kevin Martinez | Web Desginer and Developer</title>
     <link href='https://fonts.googleapis.com/css?family=Oxygen:700,300|Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,800,300,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -109,7 +109,7 @@
               <p class="lead">I am a designer, developer and a dreamer</p>
               <p>My name is Kevin, i am a open minded web artist and a code monkey with a lot of love for HTML, CSS &amp; JavaScript.</p>
               <p>
-                You can find me at my laptop, in the woods walking with my dog, on the couch with my love eating candy or at the gym excersing my back.
+                You can find me at my laptop, in the woods walking with my dog, on the couch with my love eating candy or at the gym exercising my back.
               </p>
               <p>
                 I am currently studying to become a JavaScript developer together with a bunch of awesome people led by an awesome teacher. Ain't that awesome?
@@ -281,7 +281,7 @@
           <div class="col-md-4 col-xs-offset-4">
             <blockquote class="blockquote-reverse">
               <p>
-                ”Design is Everything”
+                ”It's all about input and output”
               </p>
             </blockquote>
           </div>
@@ -309,7 +309,7 @@
 
 
     <!-- a footer made with love -->
-    <footer class="main-footer">
+    <footer class="main-footer" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
