minor chang to text in footer

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <h4>i loevs CSS</h4>
+            <h4>i love CSS</h4>
             <div class="progress">
                 <div class="progress-bar"></div>
             </div>
@@ -316,7 +316,7 @@
             <h5>Contact</h5>
             <p>hej@pixelkojan.se</p>
             <p>twitter</p>
-            <p>uuuh</p>
+            <p>love</p>
           </div>
           <div class="col-md-4">
             <h5>Written in</h5>
