changed links in portfolio

--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
               <div class="col-md-6">
                 <img src="http://placehold.it/300x300" alt="" />
                 <h3 class="text-uppercase">WAM EKO</h3>
-                <p>http://www.pixelkojan.se</p>
+                <p>http://www.wameko.se</p>
               </div>
             </div>
             <div class="row">
               <div class="col-md-6">
                 <img src="http://placehold.it/300x300" alt="" />
-                <h3 class="text-uppercase">Ganis</h3>
-                <p>http://www.pixelkojan.se</p>
+                <h3 class="text-uppercase">Bladströms</h3>
+                <p>http://www.bladstroms.se</p>
               </div>
               <div class="col-md-6">
                 <img src="http://placehold.it/300x300" alt="" />
-                <h3 class="text-uppercase">Babianis</h3>
-                <p>http://www.pixelkojan.se</p>
+                <h3 class="text-uppercase">Majas Recept</h3>
+                <p>http://www.kevinandresmartinez.se</p>
               </div>
             </div>
           </div>
