--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kevin Martinez | Web Desginer and Developer</title>
-    <link href='https://fonts.googleapis.com/css?family=Oxygen:700,300|Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,700,800,300,600' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:700,300|Source+Sans+Pro:400,300,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800,300,600" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -34,17 +34,16 @@
         <div class="col-md-4 col-xs-2">
           <!-- Site Logo -->
           <div class="logo">
-            <a href="#">
-              <h1>KEVIN</h1>
-              <img src="img/kevin_profile_new.jpg" alt="" class="img-circle profile-img visible-xs-block" />
-            </a>
+            <img class="kevin-logo" src="img/kevin-logo.png" alt="Kevin Martinez Logotype">
+            <h1 class="hidden">KEVIN</h1>
+            <img src="img/kevin_profile_new.jpg" alt="" class="img-circle profile-img visible-xs-block" />
           </div>
         </div>
         <!-- Site Navigation -->
         <nav class="col-md-6 col-md-offset-2 col-xs-8 col-xs-offset-2 main-nav">
           <ul class="row">
             <li class="col-sm-3">
-              <a href="#about">About</a>
+              <a href="#about">YO</a>
             </li>
             <li  class="col-sm-3">
               <a href="#work">Work</a>
@@ -174,7 +173,7 @@
         <div class="row">
           <div class="col-sm-4">
             <h2>Work</h2>
-            <p>This is some of my work. I do both web design and web development</p>
+            <p>Here i will present my future work. Future, come quicker!</p>
           </div>
           <div class="col-sm-8">
             <div class="row">
