html semantic structure

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- My introduction text... -->
     <!-- Intro section -->
-    <div class="intro-section" id="about">
+    <section class="intro-section" id="about">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -97,7 +97,7 @@
 
             <!-- Main text -->
             <article class="intro-text text-left">
-              <p class="lead">I am a designer, developer and a dreamer</p>
+              <h2 class="lead">I am a designer, developer and a dreamer</h2>
               <p>My name is Kevin, i am a open minded web artist and a code monkey with a lot of love for HTML, CSS &amp; JavaScript.</p>
               <p>
                 You can find me at my laptop, in the woods walking with my dog, on the couch with my love eating candy or at the gym exercising my back.
@@ -113,10 +113,10 @@
           </div>
         </div>
       </div>
-    </div><!-- Intro section end -->
+    </section><!-- Intro section end -->
 
     <!-- Quote section -->
-    <section class="quote-section intro-quote">
+    <aside class="quote-section intro-quote">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-xs-offset-4">
@@ -128,14 +128,14 @@
           </div>
         </div>
       </div>
-    </section>
+    </aside><!-- Quote section end -->
 
     <!-- Portfolio section -->
     <div class="portfolio-section" id="work">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="text-center">Portfolio</h2>
+            <h1 class="text-center">Portfolio</h1>
           </div>
         </div>
 
@@ -183,34 +183,34 @@
             <div class="progress">
                 <div class="progress-bar"></div>
             </div>
-            <h4>JavaScript is my language</h4>
+            <h4>i am a JavaScript Developer</h4>
             <div class="progress">
                 <div class="js-progress-bar progress-bar"></div>
             </div>
-            <h4>please let me put GIT as a progress skill</h4>
+            <h4>i use Git &amp; Github</h4>
             <div class="progress">
                 <div class="git-progress-bar progress-bar"></div>
             </div>
 
-            <h4>for images Photoshop has love</h4>
+            <h4>i use Photoshop for my images</h4>
             <div class="progress">
                 <div class="ps-progress-bar progress-bar"></div>
             </div>
           </div>
           <div class="col-sm-6">
-            <h4>i am pretty good with HTML</h4>
+            <h4>i write well structured and accessible HTML</h4>
             <div class="progress">
                 <div class="html-progress-bar progress-bar"></div>
             </div>
-            <h4>i am reading a book about C</h4>
+            <h4>i am reading  a book about C</h4>
             <div class="progress">
                 <div class="c-progress-bar progress-bar"></div>
             </div>
-            <h4>and Gulp... :D</h4>
+            <h4>i use Gulp, npm and many other tools</h4>
             <div class="progress">
                 <div class="gulp-progress-bar progress-bar"></div>
             </div>
-            <h4>i can draw in Illustrator</h4>
+            <h4>for wireframing, mockups and more i use Sketch and Illustrator</h4>
             <div class="progress">
                 <div class="illustrator-progress-bar progress-bar"></div>
             </div>
@@ -220,7 +220,7 @@
     </section>
 
     <!-- Quote section -->
-    <section class="quote-section outro-quote text-center">
+    <aside class="quote-section outro-quote text-center">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-xs-offset-4">
@@ -232,7 +232,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </aside><!-- Quote section end -->
 
     <!-- A footer made with love -->
     <footer class="main-footer" id="contact">
@@ -240,19 +240,19 @@
         <div class="row">
           <div class="col-md-4">
             <h5>Contact</h5>
-            <p>hej@pixelkojan.se</p>
+            <paper-input label="kevin@pixelkojan.se"></paper-input>
             <p>twitter</p>
             <p>love</p>
           </div>
           <div class="col-md-4">
             <h5>Written in</h5>
-            <p>HTML</p>
+            <p class="footer-margin">HTML</p>
             <p>CSS</p>
             <p>JavaScript</p>
           </div>
           <div class="col-md-4">
             <h5>Learning resources</h5>
-            <p>Team Treehouse</p>
+            <p class="footer-margin">Team Treehouse</p>
             <p>Udacity</p>
             <p>Code School</p>
             <p>Tutsplus</p>
