Added school section and a link to my webwork reflection assignment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kevin Martinez | Web Desginer and Developer</title>
+    <title>Kevin Martinez | Web Designer and Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Oxygen:700,300|Source+Sans+Pro:400,300,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800,300,600" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -39,7 +39,7 @@
         <nav class="col-md-6 col-md-offset-2 col-xs-8 col-xs-offset-2 main-nav">
           <ul class="row">
             <li class="col-sm-3">
-              <a href="#about">YO</a>
+              <a href="#about">About</a>
             </li>
             <li  class="col-sm-3">
               <a href="#work">Work</a>
@@ -84,7 +84,7 @@
             <h2 class="text-center">Welcome to my site</h2>
 
             <!-- TODO: 29/11 2015: Clean up test Polymer components and implement final components -->
-            <paper-item>
+            <!-- <paper-item>
               <paper-item-body two-line>
                 <div>Show your status</div>
                 <div secondary>Your status is visible to everyone</div>
@@ -93,7 +93,7 @@
             </paper-item>
             <paper-input label="Your name here"></paper-input>
             <demo-element></demo-element>
-            <progress-element></progress-element>
+            <progress-element></progress-element> -->
 
             <!-- Main text -->
             <article class="intro-text text-left">
@@ -141,15 +141,16 @@
 
         <div class="row">
           <div class="col-sm-4">
-            <h2>Work</h2>
-            <p>Here i will present my future work. Future, come quicker!</p>
+            <h2>School Work</h2>
+            <p>At the moment i am studying to become a JavaScript Developer at the Swedish Lernia Vocal University.</p>
+            <p>These are my school assignments.</p>
           </div>
           <div class="col-sm-8">
             <div class="row">
               <div class="col-md-6">
-                <img src="http://placehold.it/300x300" alt=""  data-toggle="modal" data-target="#project1"/>
-                <h3 class="text-uppercase">Yoiride</h3>
-                <p>http://www.pixelkojan.se</p>
+                <a href="b3_b4-reflection.html"><img src="img/webwork-thumb.png" alt="web work's website screenshot"/>
+                <h3 class="text-uppercase">B_3 &amp; B_4</h3>
+                <p>Reflektion</p></a>
               </div>
               <div class="col-md-6">
                 <img src="http://placehold.it/300x300" alt="" />
