--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
           <div class="col-sm-8">
             <div class="row">
               <div class="col-md-6">
+                <a href="http://kevinmartinez.github.io/b_2-css"><img src="img/b2-thumb.jpg" alt="my contribution to the CSS Zen Garden"/>
+                <h3 class="text-uppercase">B_2</h3>
+                <p>CSS</p></a>
+              </div>
+              <div class="col-md-6">
                 <a href="b3_b4-reflection.html"><img src="img/webwork-thumb.png" alt="web work's website screenshot"/>
                 <h3 class="text-uppercase">B_3 &amp; B_4</h3>
                 <p>Reflektion</p></a>
-              </div>
-              <div class="col-md-6">
-                <img src="http://placehold.it/300x300" alt="" />
-                <h3 class="text-uppercase">WAM EKO</h3>
-                <p>http://www.wameko.se</p>
               </div>
             </div>
             <div class="row">
