--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="col-sm-8">
             <div class="row">
               <div class="col-md-6">
-                <a href="http://kevinmartinez.github.io/b_2-css"><img src="img/b2-thumb.jpg" alt="my contribution to the CSS Zen Garden"/>
+                <a href="b2-css.html"><img src="img/b2-thumb.jpg" alt="my contribution to the CSS Zen Garden"/>
                 <h3 class="text-uppercase">B_2</h3>
                 <p>CSS</p></a>
               </div>
