--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="col-md-4 col-xs-2">
           <!-- Site Logo -->
           <div class="logo">
-            <img class="kevin-logo" src="img/kevin-logo.png" alt="Kevin Martinez Logotype">
+            <img class="kevin-logo" src="img/kevin-logo.svg" alt="Kevin Martinez Logotype">
             <h1 class="hidden">KEVIN</h1>
             <img src="img/kevin_profile_new.jpg" alt="" class="img-circle profile-img visible-xs-block" />
           </div>
@@ -156,18 +156,6 @@
                 <a href="b3_b4-reflection.html"><img src="img/webwork-thumb.png" alt="web work's website screenshot"/>
                 <h3 class="text-uppercase">B_3 &amp; B_4</h3>
                 <p>Reflektion</p></a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <img src="http://placehold.it/300x300" alt="" />
-                <h3 class="text-uppercase">Bladströms</h3>
-                <p>http://www.bladstroms.se</p>
-              </div>
-              <div class="col-md-6">
-                <img src="http://placehold.it/300x300" alt="" />
-                <h3 class="text-uppercase">Majas Recept</h3>
-                <p>http://www.kevinandresmartinez.se</p>
               </div>
             </div>
           </div>
