--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kevin Martinez | Web Designer and Developer</title>
+    <script>
+      window.Polymer = window.Polymer || {};
+      window.Polymer.dom = 'shadow';
+    </script>
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen:700,300|Source+Sans+Pro:400,300,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,800,300,600" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -65,6 +70,7 @@
         <div class="row">
           <div class="col-md-12">
             <h2 class="text-center">Welcome to my site</h2>
+
             <article class="intro-text text-left">
               <h2 class="lead">I am a designer, developer and a dreamer</h2>
               <p>My name is Kevin, i am a open minded web artist and a code monkey with a lot of love for HTML, CSS &amp; JavaScript.</p>
@@ -125,6 +131,15 @@
                 <a href="b3_b4-reflection.html"><img src="img/webwork-thumb.png" alt="A screenshot of WebWork's website">
                 <h3 class="text-uppercase">B_3 &amp; B_4</h3>
                 <p>Reflektion</p></a>
+              </div>
+            </div>
+          </section>
+          <section class="col-sm-offset-4 col-sm-8">
+            <div class="row">
+              <div class="col-md-6">
+                <a href="b5-infographic.html"><img src="img/b5-thumb.jpg" alt="My contribution to the CSS Zen Garden">
+                <h3 class="text-uppercase">B_5</h3>
+                <p>Interaktiv Infographic</p></a>
               </div>
             </div>
           </section>
@@ -216,6 +231,11 @@
         </div>
       </div>
     </footer><!-- Footer end -->
+    <script>
+      var woot = document.querySelector('binding-datazor');
+
+      // woot.wootTitle = 'Hello, is it me you are looking for?'
+    </script>
 
     <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
