--- a/b5-infographic.html
+++ b/b5-infographic.html
@@ -18,13 +18,14 @@
         <div class="col-md-4 col-xs-2">
           <!-- Site Logo -->
           <a href="index.html">
-            <div class="logo">
-              <img class="kevin-logo" src="img/kevin-logo.png" alt="Kevin Martinez Logotype">
-              <h1 class="hidden">KEVIN</h1>
-              <img src="img/kevin_profile_new.jpg" alt="" class="img-circle profile-img visible-xs-block" />
-            </div>
+              <div class="logo">
+                <img class="kevin-logo" src="img/kevin-logo.svg" alt="Kevin Martinez Logotype">
+                <h1 class="hidden">Kevin Martinez Portfolio</h1>
+                <img src="img/kevin_profile_new.jpg" alt="Kevin Martinez" class="img-circle profile-img visible-xs-block">
+              </div><!-- Site logo end -->
           </a>
         </div>
+
         <!-- Site Navigation -->
         <nav class="col-md-6 col-md-offset-2 col-xs-8 col-xs-offset-2 main-nav">
           <ul class="row">
