add link to images in subfolders

--- a/b2-css.html
+++ b/b2-css.html
@@ -28,7 +28,9 @@
 
   <!-- Header Section -->
   <header class="main-header clearfix container">
-                  <img class="flip" src="img/marketing-page.png" alt="">
+    <a href="http://kevinmartinez.github.io/b_2-css/">
+      <img class="flip" src="img/marketing-page.png" alt="">
+    </a>
     <div class="profile-text">
       <p>
         Uppgift att skapa en stilmall för webb-projektet CSS Zen Garden
