--- a/b3-b4.html
+++ b/b3-b4.html
@@ -28,7 +28,9 @@
 
   <!-- Header Section -->
   <header class="main-header clearfix container">
-                  <img class="flip" src="img/marketing-page.png" alt="">
+    <a href="http://kevinmartinez.github.io/FRO15-B4/">
+      <img class="flip" src="img/search-page.png" alt="">
+    </a>
     <div class="profile-text">
       <p>Skapa en fiktiv webbyrå tillsammans med sin grupp.</p>
     </div>
