--- a/b5-infographic.html
+++ b/b5-infographic.html
@@ -28,9 +28,12 @@
 
   <!-- Header Section -->
   <header class="main-header clearfix container">
-                  <img class="flip" src="img/marketing-page.png" alt="">
+    <a href="http://kevinmartinez.github.io/B_5-Interaktiv-Infographic/">
+      <img class="flip" src="img/travel-app.png" alt="">
+    </a>
     <div class="profile-text">
-      <p>Skapa en fiktiv webbyrå tillsammans med sin grupp.</p>
+      <p>Create an interactive Infographic.</p>
+      <p><em>Click the image to see the Infographic</em></p>
     </div>
   </header>
 
