change link in b_5, add package.json, add node_modules to .gitignore

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ TODO OBSERVE THESE DIVIDER DIVS, DO NOT USE IN PROD -->
         </figcaption>
       </figure>
       <figure class="col">
-        <a href="b5-infographic.html">
+        <a href="http://kevinmartinez.github.io/B_5-Interaktiv-Infographic/">
         <div class="flip-container">
           <img class="flip" src="img/travel-app.png" alt="">
         </div>
