change language from swedish to english in the project descriptions. Add external links to projects

--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@ TODO OBSERVE THESE DIVIDER DIVS, DO NOT USE IN PROD -->
 
       <!-- First Portfolio Row -->
       <figure class="col">
-        <a href="b2-css.html">
+        <a href="http://kevinmartinez.github.io/b_2-css/">
         <div class="flip-container">
           <img class="flip" src="img/marketing-page.png" alt="">
         </div>
         </a>
         <figcaption>
           <h3>CSS Zen Garden</h3>
-          Uppgift att skapa en stilmall för webb-projektet CSS Zen Garden.
+          This is my contribution to the CSS Zen Garden. Trying all kinds of CSS techniques in my stylesheet.
         </figcaption>
       </figure>
       <figure class="col">
-        <a href="b3-b4.html">
+        <a href="http://kevinmartinez.github.io/FRO15-B4/">
         <div class="flip-container">
           <img class="flip" src="img/search-page.png" alt="">
         </div>
         </a>
         <figcaption>
           <h3>B3 &amp; B4</h3>
-          Skapa en fiktiv webbyrå tillsammans med sin grupp.
+          This is a school project. The task was to create a fictive web-bureau. It is created with the front-end framework; Bootstrap 3
         </figcaption>
       </figure>
       <figure class="col">
@@ -96,7 +96,7 @@ TODO OBSERVE THESE DIVIDER DIVS, DO NOT USE IN PROD -->
         </a>
         <figcaption>
           <h3>B5</h3>
-          Skapa en infographic
+          This is my infographic. It uses facts from the documentary Cowspiracy. Check it out, it has a lot of heavy facts! Hand coded and a lot of love from Sketch involved!
         </figcaption>
       </figure>
 
