--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Kevin Martinez Web Developer & Designer in Sweden Portfolio.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis:400,800" rel="stylesheet" type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis:400,800" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/style.css">
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -16,128 +16,105 @@
 
   ga('create', 'UA-87592698-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 </head>
 <body>
   <!-- Main Navigation -->
-
-  <!-- TODO
-  TODO
-  TODO OBS WRAPPER DIV CONSIDER TO REFACTOR THIS ENTIRELY -->
-
-    <div class="wrapper">
-  <nav id="main-navigation">
-    <a class="site-logo" href="#"><h1>Kevin Martinez <span>Front-End Developer</span></h1></a>
-    <ul class="nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="#portfolio-section">Projects</a></li>
-      <li><a href="#main-footer">Contact</a></li>
-    </ul>
-  </nav>
-
-
-
-  <!-- Header Section -->
-  <header class="main-header clearfix container">
-
-    <figure class="profile-img-container">
-      <img class="profile-img" src="img/kevin_profile.jpg" alt="Kevin Martinez">
-    </figure>
-    <div class="profile-text">
-      <p class="pt-lead">Hello!</p>
-      <p class="pt-main">My name is Kevin! I am currently studying to become a <strong>JavaScript</strong> developer together with a bunch of awesome people doing awesome things.</p>
-    </div>
-
-
-  </header>
-
-  <!-- Portfolio Section -->
-  <div class="divider ss-style-doublediagonal">
-  </div>
-
-<!-- TODO
-TODO
-TODO OBSERVE THESE DIVIDER DIVS, DO NOT USE IN PROD -->
-  <div class="second-bg">
-
-
-  <main role="main" id="portfolio-section" class="container">
-    <h2>Projects</h2>
-
-      <!-- First Portfolio Row -->
-      <figure class="col">
-        <a href="http://kevinmartinez.github.io/b_2-css/">
-        <div class="flip-container">
-          <img class="flip" src="img/marketing-page.png" alt="">
-        </div>
-        </a>
-        <figcaption>
-          <h3>CSS Zen Garden</h3>
-          This is my contribution to the CSS Zen Garden. Trying all kinds of CSS techniques in my stylesheet.
-        </figcaption>
+  <!-- TODO TODO TODO OBS WRAPPER DIV CONSIDER TO REFACTOR THIS ENTIRELY -->
+  <div class="wrapper">
+    <nav id="main-navigation">
+      <a class="site-logo" href="#"><h1>Kevin Martinez <span>Front-End Engineer</span></h1></a>
+      <ul class="nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#portfolio-section">Projects</a></li>
+        <li><a href="#main-footer">Contact</a></li>
+      </ul>
+    </nav>
+    <!-- Header Section -->
+    <header class="main-header clearfix container">
+      <figure class="profile-img-container">
+        <img class="profile-img" src="img/kevin_profile.jpg" alt="Kevin Martinez">
       </figure>
-      <figure class="col">
-        <a href="http://kevinmartinez.github.io/FRO15-B4/">
-        <div class="flip-container">
-          <img class="flip" src="img/search-page.png" alt="">
-        </div>
-        </a>
-        <figcaption>
-          <h3>B3 &amp; B4</h3>
-          This is a school project. The task was to create a fictive web-bureau. It is created with the front-end framework; Bootstrap 3
-        </figcaption>
-      </figure>
-      <figure class="col">
-        <a href="http://kevinmartinez.github.io/B_5-Interaktiv-Infographic/">
-        <div class="flip-container">
-          <img class="flip" src="img/travel-app.png" alt="">
-        </div>
-        </a>
-        <figcaption>
-          <h3>B5</h3>
-          This is my infographic. It uses facts from the documentary Cowspiracy. Check it out, it has a lot of heavy facts! Hand coded and a lot of love from Sketch involved!
-        </figcaption>
-      </figure>
-
-
-
-
-
-
-
-  </main>
-</div>
-
-
-
-  <!-- Main Footer -->
-  <footer id="main-footer">
-    <div >
-    <h2>Contact</h2>
-    <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-
-    <p class="phone">Phone <a href="tel:+46768804041">+46 768 804 041</a></p>
-
-    <p class="mail">Email <a href="mailto:hej@pixelkojan.se?subject=Aloha">hej@pixelkojan.se</a></p>
-
-    <hr>
-
-    <div class="clearfix">
-      <div class="mobile-bottom clearfix">
-        <h5>Kevin Martinez</h5>
-        <h5><a href="#main-navigation">Back to top</a></h5>
+      <div class="profile-text">
+        <p class="pt-lead">Hello!</p>
+        <p class="pt-main">
+          My name is Kevin! I am a <b>JavaScript</b> Developer, a Web Designer and a Back-End Developer with <b>C#</b> student. I do Full-Stack Engineering and design with love.
+        </p>
       </div>
-      <nav class="footer-nav">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#portfolio-section">Portfolio</a></li>
-          <li><a href="#main-footer">Contact</a></li>
-        </ul>
-      </nav>
+    </header>
+    <!-- Portfolio Section -->
+    <div class="divider ss-style-doublediagonal"></div>
+    <!-- TODO TODO TODO OBSERVE THESE DIVIDER DIVS, DO NOT USE IN PROD -->
+    <div class="second-bg">
+      <main role="main" id="portfolio-section" class="container">
+        <h2>Projects</h2>
+        <!-- First Portfolio Row -->
+        <figure class="col">
+          <a href="http://kevinmartinez.github.io/b_2-css/">
+          <div class="flip-container">
+            <img class="flip" src="img/marketing-page.png" alt="">
+          </div></a>
+          <figcaption>
+            <h3>CSS Zen Garden</h3>
+            <p>
+              This is my contribution to the CSS Zen Garden. Trying all kinds of CSS techniques in my stylesheet. It is a crazy page, but check out the CSS and you will be impressed!
+            </p>
+          </figcaption>
+        </figure>
+        <figure class="col">
+          <a href="http://kevinmartinez.github.io/FRO15-B4/">
+          <div class="flip-container">
+            <img class="flip" src="img/search-page.png" alt="">
+          </div></a>
+          <figcaption>
+            <h3>B3 &amp; B4</h3>
+            <p>
+              This is a school group project. Our team designed and coded a web-site for a fictitious web bureau. We used Bootstrap 3 as our Front-End framework. 
+            </p>
+          </figcaption>
+        </figure>
+        <figure class="col">
+          <a href="http://kevinmartinez.github.io/B_5-Interaktiv-Infographic/">
+          <div class="flip-container">
+            <img class="flip" src="img/travel-app.png" alt="">
+          </div></a>
+          <figcaption>
+            <h3>B5</h3>
+            <p>
+              This is my infographic. It uses facts from the documentary Cowspiracy. Check it out, it has a lot of heavy facts! Hand coded and a lot of love from Sketch involved!
+            </p>
+          </figcaption>
+        </figure>
+      </main>
     </div>
+    <!-- Main Footer -->
+    <footer id="main-footer">
+      <div >
+        <h2>Contact</h2>
+        <p>
+          If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!
+        </p>
+        <p class="phone">
+          Phone<a href="tel:+46768804041">+46 768 804 041</a>
+        </p>
+        <p class="mail">
+          Email<a href="mailto:hej@pixelkojan.se?subject=Aloha">hej@pixelkojan.se</a></p>
+        <hr>
+        <div class="clearfix">
+          <div class="mobile-bottom clearfix">
+            <h5>Kevin Martinez</h5>
+            <h5><a href="#main-navigation">Back to top</a></h5>
+          </div>
+          <nav class="footer-nav">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#portfolio-section">Portfolio</a></li>
+              <li><a href="#main-footer">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </div>
-  </footer>
-</div>
 </body>
 </html>
