change project headings to better reflect the link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img class="flip" src="img/marketing-page.png" alt="">
           </div></a>
           <figcaption>
-            <h3>CSS Zen Garden</h3>
+            <h3>CSS Zen Garden Contribution</h3>
             <p>
               This is my contribution to the CSS Zen Garden. Trying all kinds of CSS techniques in my stylesheet. It is a crazy page, but check out the CSS and you will be impressed!
             </p>
@@ -67,9 +67,9 @@
             <img class="flip" src="img/search-page.png" alt="">
           </div></a>
           <figcaption>
-            <h3>B3 &amp; B4</h3>
+            <h3>Group Project</h3>
             <p>
-              This is a school group project. Our team designed and coded a web-site for a fictitious web bureau. We used Bootstrap 3 as our Front-End framework. 
+              This is a school group project. Our team designed and coded a web-site for a fictitious web bureau. We used Bootstrap 3 as our Front-End framework.
             </p>
           </figcaption>
         </figure>
@@ -79,7 +79,7 @@
             <img class="flip" src="img/travel-app.png" alt="">
           </div></a>
           <figcaption>
-            <h3>B5</h3>
+            <h3>Cowspiracy Infographic</h3>
             <p>
               This is my infographic. It uses facts from the documentary Cowspiracy. Check it out, it has a lot of heavy facts! Hand coded and a lot of love from Sketch involved!
             </p>
