add new flat avatar as profile img instead of photography

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Header Section -->
     <header class="main-header clearfix container">
       <figure class="profile-img-container">
-        <img class="profile-img" src="img/kevin_profile.jpg" alt="Kevin Martinez">
+        <img class="profile-img" src="img/kevin-avatar.svg" alt="Kevin Martinez">
       </figure>
       <div class="profile-text">
         <p class="pt-lead">Hello!</p>
