change in developer title and changed presentation text

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
   <!-- TODO TODO TODO OBS WRAPPER DIV CONSIDER TO REFACTOR THIS ENTIRELY -->
   <div class="wrapper">
     <nav id="main-navigation">
-      <a class="site-logo" href="#"><h1>Kevin Martinez <span>Front-End Engineer</span></h1></a>
+      <a class="site-logo" href="#"><h1>Kevin Martinez <span>Front-End Developer</span></h1></a>
       <ul class="nav">
         <li><a href="#">Home</a></li>
         <li><a href="#portfolio-section">Projects</a></li>
         <li><a href="#main-footer">Contact</a></li>
       </ul>
     </nav>
+
     <!-- Header Section -->
     <header class="main-header clearfix container">
       <figure class="profile-img-container">
@@ -38,7 +39,8 @@
       <div class="profile-text">
         <p class="pt-lead">Hello!</p>
         <p class="pt-main">
-          My name is Kevin! I am a <b>JavaScript</b> Developer, a Web Designer and a Back-End Developer with <b>C#</b> student. I do Full-Stack Engineering and design with love.
+          My name is Kevin! I am a <b>Web Designer</b> and Web Developer from Chile and Sweden. I study <b>JavaScript</b> and <b>C#</b>.
+          Check out some of my projects below!
         </p>
       </div>
     </header>
@@ -74,7 +76,7 @@
           </figcaption>
         </figure>
         <figure class="col">
-          <a href="http://kevinmartinez.github.io/B_5-Interaktiv-Infographic/">
+          <a href="http://kevinmartinez.github.io/cowspiracy.infographic/">
           <div class="flip-container">
             <img class="flip" src="img/travel-app.png" alt="">
           </div></a>
@@ -95,10 +97,10 @@
           If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!
         </p>
         <p class="phone">
-          Phone<a href="tel:+46768804041">+46 768 804 041</a>
+          Phone<a href="tel:+46768804041"> +46 768 804 041</a>
         </p>
         <p class="mail">
-          Email<a href="mailto:hej@pixelkojan.se?subject=Aloha">hej@pixelkojan.se</a></p>
+          Email<a href="mailto:hej@pixelkojan.se?subject=Aloha"> hej@pixelkojan.se</a></p>
         <hr>
         <div class="clearfix">
           <div class="mobile-bottom clearfix">
